--- a/index.css
+++ b/index.css
@@ -13,8 +13,8 @@
 .slider-container{
     position: relative;
     
-    width: 500px;
-    height: 300px;
+    width: 640px;
+    height: 500px;
     overflow: hidden;
 }
 .img-container{
@@ -30,13 +30,15 @@
     cursor: pointer;
 }
 .prev{
+    font-size: 25px;
     left: 10px;
 }
 .next{
+    font-size: 25px;
     right: 10px;
 }
 .prev:hover,.next:hover{
-    color: red;
+    font-size: 30px;
 }
 
 .navigation-dots {
@@ -45,11 +47,11 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 65%;
+    top: 70%;
 }  
 
 .single-dot {
-    background: #333;
+    background: red;
     height: 16px;
     width: 16px;
     border: 2px solid #000;
